Move advanced usage and troubleshooting comments to doc